2015-10-22  Oliver Lemke  <olemke@core-dump.info>

	* doc/arts.rst, doc/modules.rst, typhon/__init__.py,
	typhon/arts/__init__.py, typhon/arts/xml.py:

	Started new xml implementation. Loosely based on the implementation in
	pyatmlab. Thanks Gerrit.
	
2015-10-22  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py, typhon/files/__init__.py, doc/files.rst,
	doc/modules.rst:

	Add 'files' module.

	* typhon/files/utils.py:

	Add convenience function 'decompress' for temporary unpacking of
	compressed files.

	* doc/developer.rst: Add section about default module short names.

	* doc/conf.py:

	Fix module sorting by using 'typhon.' as a common prefix.

	* .gitignore: Ignore file for git-svn users.

2015-10-20  Oliver Lemke  <olemke@core-dump.info>

	* doc/index.rst: Fix headings/title.

2015-10-20  Oliver Lemke  <olemke@core-dump.info>

	* doc/developer.rst, doc/example_google.py, doc/index.rst,
	doc/modules.rst:

	Added docs on coding and docstring styles. Restructure the toctree.

2015-10-19  Oliver Lemke  <olemke@core-dump.info>

	* Docs are now available at http://typhon.readthedocs.org/

	* typhon/legacy/arts_types.py:

	Remove no longer existing data types from documentation.

2015-10-19  Oliver Lemke  <olemke@core-dump.info>

	* setup.py: Fix syntax error. Add numpy and scipy as requirements.

2015-10-19  Oliver Lemke  <olemke@core-dump.info>

	* doc/legacy.rst: Add docs for legacy module.

	* doc/index.rst: Add link to legacy module docs.

	* doc/conf.py: Load napoleon extension for numpy doc format.

	* typhon/legacy/arts_types.py:

	Fix some docstrings to avoid sphinx errors.

2015-10-19  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Define version number here. Set to 0.0.4.

	Do not increase version number on commit! It will only be increased
	after a release has been upload to pypi.
	
	* setup.py, doc/conf.py: Use __version__ from init file.

	* doc/conf.py: Use RTD theme.

2015-10-16  Oliver Lemke  <olemke@core-dump.info>
